# dsp-decision-engine

./: .dockerignore  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.py
.github/workflows/: build.yml  feature.yml  hold.yml  main.yml  release.yml
docker/: Dockerfile
docs/: .gitignore  Index.md  api.rst  conf.py  index.rst  main.md  main.rst  robots.txt
docs/concepts/: decision_tables.ipynb  decision_trees.ipynb  index.md  inference.md  scorecard.ipynb  variable_nodes.md
docs/getting_started/: contributing.md  index.md  install.md  license.md  quick_start.ipynb
engine/: __init__.py  core.py  exceptions.py  nodes.py  serving.py  util.py
engine/components/: calculate.py  call.py  dtable.py  dtree.py  inputs.py  scorecard.py
engine/components/scorecard/: probability.py
engine/components/scorecard/v2/: adjustments.py  common.py  criteria.py  criteria_categorical.py  criteria_numerical.py  scorecard.py  ui.py
engine/parsers/: nested_dicts.py
engine/server/: asgi.py  predictor.py  run.py  serve.py  train.py
lib/: annotators.py  creators.py  helpers.py  primitives.py
lib/builtin_funcs/: __init__.py  base_ops.py  decision_tree.py  score_table.py  scorecard.py  scorecard_impl.py  scoretable_impl.py
requirements/: TODO.txt  all-prod.txt  all.txt  build.txt  core.txt  dev.txt  docs.txt  parsers.txt  webapp.txt  yaml.txt
spockflow/: __init__.py  _imports.py  _serializable.py  _util.py  _version.py  config_node.py  core.py  corev2.py  exceptions.py  nodes.py  tracing.py
spockflow/components/: calculate.py  call.py  dtable.py  dtree.py  refactor_common.py  todo_calculate.py  todo_inputs.py
spockflow/components/scorecard/: __init__.py  exceptions.py  logger.py  probability.py
spockflow/components/scorecard/v2/: adjustments.py  common.py  criteria.py  criteria_categorical.py  criteria_numerical.py  scorecard.py  ui.py
spockflow/components/tree/: __init__.py  settings.py
spockflow/components/tree/v1/: compiled.py  core.py  numpy_impl.py
spockflow/components/tree/v1/tmp/: core.py  sympy_impl.py
spockflow/inference/: cache.py  exceptions.py  handler.py  model_loader.py  settings.py  util.py
spockflow/inference/config/loader/: base.py  empty.py  yamlmanager.py
spockflow/inference/io/: accept_type_parser.py  content_types.py  decoders.py  encoders.py  json_encoder.py  responses.py
spockflow/inference/server/: asgi.py  models.py  predictor.py  run.py  serve.py
spockflow/plugins/: jupyter_magic.py
tests/test_pipelines/p00_basic/: main.py  proc_1.py  transforms.py
tests/test_pipelines/p01_nested_imports/: main.py
tests/test_pipelines/p01_nested_imports/util_module/: do_calcs.py
tests/test_pipelines/ptree02_basic/: main.py
tests/unit/: test_config_loaders.py  test_pipeline_build.py  test_scorecard.py  test_tree.py
