[project]
name = "SpockFlow"  
description = "Everything you could ever dream of"# TODO
readme = {file = "README.md", content-type = "text/markdown"}
version = "0.2.1"
requires-python = ">=3.8"
authors = [
    { name = "Sholto Armstrong", email = "sholto.armstrong@capitecbank.co.za" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]
dynamic = ["dependencies","optional-dependencies"]
keywords = []
license = {file = "LICENSE"}

[tool.setuptools.dynamic]
dependencies = {file = "requirements/core.txt"}
[tool.setuptools.dynamic.optional-dependencies]
dev = {file = "requirements/dev.txt"}
publishing = {file = "requirements/publishing.txt"}
parsers = {file = "requirements/parsers.txt"}
webapp = {file = "requirements/webapp.txt"}
yaml = {file = "requirements/yaml.txt"}

# [project.urls]
# Repository = "{{ cookiecutter.repository_url }}"
# Issues = "{{ cookiecutter.repository_url }}/issues"
# Changelog = "{{ cookiecutter.repository_url }}/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
command_line = "-m pytest"

[tool.setuptools.packages.find]
include = ["spockflow*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"spockflow.inference.server" = ["nginx.conf"]
