[project]
name = "SpockFlow"  
description = "Everything you could ever dream of"# TODO
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
authors = [
    { name = "Sholto Armstrong", email = "sjnarmstrong@gmail.com" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]
dynamic = ["dependencies","optional-dependencies","version"]
keywords = []
license = {file = "LICENSE"}

[build-system]
requires = ["setuptools", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = "requirements/core.txt"}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = "requirements/dev.txt"}
parsers = {file = "requirements/parsers.txt"}
webapp = {file = "requirements/webapp.txt"}
yaml = {file = "requirements/yaml.txt"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
command_line = "-m pytest"

[tool.setuptools.packages.find]
include = ["spockflow*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"spockflow.inference.server" = ["nginx.conf"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "spockflow/_version.py"
versionfile_build = "spockflow/_version.py"
tag_prefix = "v"
parentdir_prefix = "spockflow-"